--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday, Ms. Palma na laging late pero ok lang maganda naman si mæm :D
+                Enjoy your day! sa nag impluwensya sakin magpuyat everyday joke lang HAHAHAHA
+HAPPY BIRTHDAY!!! :D
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
