--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Enjoy your day! sa nag impluwensya sakin magpuyat everyday joke lang HAHAHAHA
-HAPPY BIRTHDAY!!! :D
+                Enjoy your day! sa nag impluwensya sakin magpuyat everyday joke lang HAHAHAHA HAPPY BIRTHDAY!!! :D
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
