--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Enjoy your day! sa nag impluwensya sakin magpuyat everyday joke lang HAHAHAHA HAPPY BIRTHDAY!!! :D
+                Happy Birthday Ms. Palma na laging late pero ok lang maganda naman si mæm :D
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
-            <p class="idea-3">
+            <p class="idea-1"> Enjoy your day! sa nag impluwensya sakin magpuyat everyday !</p>
+            <p class="idea-2">joke lang HAHAHAHA HAPPY BIRTHDAY!!</p>
+           <!-- <p class="idea-3">
                 I realised, I wanted to do something<br>
                 <strong>special</strong>
                 .
@@ -61,7 +61,7 @@
             <p class="idea-6">
                 <span>S</span>
                 <span>O</span>
-            </p>
+            </p> -->
         </div>
 
         <div class="six">
