--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
         </div>
 
         <div class="five">
-            <p class="idea-1"> Enjoy your day! sa nag impluwensya sakin magpuyat everyday !</p>
-            <p class="idea-2">joke lang HAHAHAHA HAPPY BIRTHDAY!!</p>
-           <!-- <p class="idea-3">
-                I realised, I wanted to do something<br>
-                <strong>special</strong>
+            <p class="idea-1"> Enjoy your day!</p>
+            <p class="idea-2"> sa nag impluwensya sakin magpuyat everyday!</p>
+            <p class="idea-3">
+                joke lang HAHAHAHA <br>
+                <strong>HAPPY BIRTHDAY!!</strong>
                 .
             </p>
-            <p class="idea-4">Because,</p>
+            <p class="idea-4">And...</p>
             <p class="idea-5">
-                You are Special
+                You're my favorite notification since 2024
                 <span>:)</span>
             </p>
-            <p class="idea-6">
+        <!--    <p class="idea-6">
                 <span>S</span>
                 <span>O</span>
             </p> -->
